retrieveUnpackaged/objects/Account.object
<CustomObject>
    <fields>
        <fullName>CenterType__c</fullName>
        <description>/ Aus AB AG CRM Requirements doc. To be verified!</description>
        <label>Type of Center</label>
        <picklist>
            <picklistValues>
                <fullName>Surgical Center</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Fitting Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rehabilitation Center</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>/</description>
        <label>City</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>/</description>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CustomerId__c</fullName>
        <displayFormat>C{000000000}</displayFormat>
        <externalId>true</externalId>
        <label>Customer Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email /</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>HouseNumber__c</fullName>
        <description>/</description>
        <label>House Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LS_CustomerId__c</fullName>
        <description>/ Customer Id migrated from the legacy systems</description>
        <externalId>true</externalId>
        <label>Customer Id LS</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>/ Aus AB AG CRM Requirements doc. To be verified!</description>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name2__c</fullName>
        <description>/</description>
        <label>Name 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name3__c</fullName>
        <description>/</description>
        <label>Name 3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name4__c</fullName>
        <description>/</description>
        <label>Name 4</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <description>/</description>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>/</description>
        <label>Region</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>/ Aus AB AG CRM Requirements doc. To be verified!</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>delivery block</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>/</description>
        <label>Street</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CustomerId__c</columns>
        <columns>Street__c</columns>
        <columns>HouseNumber__c</columns>
        <columns>PostalCode__c</columns>
        <columns>City__c</columns>
        <columns>Region__c</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Clinic</fullName>
        <active>true</active>
        <description>A Customer Clinic of AB AG</description>
        <label>Clinic</label>
    </recordTypes>
    <recordTypes>
        <fullName>Distributor</fullName>
        <active>true</active>
        <description>A Distributor Customer of AB AG</description>
        <label>Distributor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <description>An Account to indicate for example an AB internal pseudo customer</description>
        <label>Other</label>
    </recordTypes>
    <validationRules>
        <fullName>PostalCode_AU</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  ISPICKVAL(Country__c, &quot;AU&quot;),
NOT(REGEX(  PostalCode__c  ,&quot;\\d{0,7}$&quot;)))</errorConditionFormula>
        <errorMessage>Invalid postal code format</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PostalCode_IL</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  ISPICKVAL(Country__c, &quot;IL&quot;),
NOT(REGEX(  PostalCode__c  ,&quot;\\d{5,5}$&quot;)))</errorConditionFormula>
        <errorMessage>Invalid postal code format</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PostalCode_NO</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  ISPICKVAL(Country__c, &quot;NO&quot;),
NOT(REGEX(  PostalCode__c  ,&quot;\\d{4,4}$&quot;)))</errorConditionFormula>
        <errorMessage>Invalid postal code format</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PostalCode_NZ</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  ISPICKVAL(Country__c, &quot;NZ&quot;), NOT(REGEX(  PostalCode__c  ,&quot;\\d{4,4}$|\\d{0,0}$&quot;)))</errorConditionFormula>
        <errorMessage>Invalid postal code format</errorMessage>
    </validationRules>
</CustomObject>